[gd_scene load_steps=22 format=2]

[ext_resource path="res://objects/templates/boy/scripts/fall.gd" type="Script" id=1]
[ext_resource path="res://objects/templates/boy/asset/boy.png" type="Texture" id=2]
[ext_resource path="res://objects/templates/boy/scripts/updater.gd" type="Script" id=4]
[ext_resource path="res://objects/templates/boy/scripts/wall_jump.gd" type="Script" id=5]
[ext_resource path="res://objects/templates/boy/scripts/die.gd" type="Script" id=7]
[ext_resource path="res://objects/templates/boy/scripts/player.gd" type="Script" id=8]
[ext_resource path="res://objects/templates/boy/scripts/camera.gd" type="Script" id=9]
[ext_resource path="res://objects/templates/boy/scripts/fsm.gd" type="Script" id=10]
[ext_resource path="res://objects/templates/boy/scripts/idle.gd" type="Script" id=11]
[ext_resource path="res://objects/templates/boy/scripts/hit.gd" type="Script" id=12]
[ext_resource path="res://objects/templates/boy/scripts/jump.gd" type="Script" id=14]
[ext_resource path="res://objects/templates/boy/scripts/motion.gd" type="Script" id=15]
[ext_resource path="res://objects/templates/boy/scripts/template.gd" type="Script" id=16]
[ext_resource path="res://objects/templates/boy/scripts/run.gd" type="Script" id=17]
[ext_resource path="res://objects/templates/boy/scripts/attack.gd" type="Script" id=20]
[ext_resource path="res://objects/templates/boy/scripts/collision.gd" type="Script" id=21]
[ext_resource path="res://objects/templates/boy/scripts/swim.gd" type="Script" id=22]
[ext_resource path="res://objects/templates/boy/scripts/controls.gd" type="Script" id=23]
[ext_resource path="res://objects/templates/boy/scripts/slide.gd" type="Script" id=24]
[ext_resource path="res://objects/templates/boy/scripts/wall_slide.gd" type="Script" id=25]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.5998
height = 28.3997

[node name="boy" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -54 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -60, -160 )

[node name="anim" type="AnimationPlayer" parent="."]

[node name="fsm" type="Node" parent="."]
script = ExtResource( 10 )

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 11 )

[node name="run" type="Node" parent="fsm"]
script = ExtResource( 17 )

[node name="slide" type="Node" parent="fsm"]
script = ExtResource( 24 )

[node name="jump" type="Node" parent="fsm"]
script = ExtResource( 14 )

[node name="fall" type="Node" parent="fsm"]
script = ExtResource( 1 )

[node name="attack" type="Node" parent="fsm"]
script = ExtResource( 20 )

[node name="wall_jump" type="Node" parent="fsm"]
script = ExtResource( 5 )

[node name="wall_slide" type="Node" parent="fsm"]
script = ExtResource( 25 )

[node name="wall_slide_timer" type="Timer" parent="fsm/wall_slide"]
wait_time = 0.6
one_shot = true

[node name="swim" type="Node" parent="fsm"]
script = ExtResource( 22 )

[node name="die" type="Node" parent="fsm"]
script = ExtResource( 7 )

[node name="hit" type="Node" parent="fsm"]
script = ExtResource( 12 )

[node name="template" type="Node" parent="fsm"]
script = ExtResource( 16 )

[node name="controls" type="Node" parent="."]
script = ExtResource( 23 )

[node name="motion" type="Node" parent="."]
script = ExtResource( 15 )

[node name="updater" type="Node" parent="."]
script = ExtResource( 4 )

[node name="collision" type="Node" parent="."]
script = ExtResource( 21 )

[node name="camera" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 600
smoothing_enabled = true
script = ExtResource( 9 )

[node name="label" type="Label" parent="."]
margin_left = -30.0
margin_top = -171.5
margin_right = 27.0
margin_bottom = -147.5
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -38, -50.75 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 38.75, -48.75 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( -1, -5.25 )
enabled = true
cast_to = Vector2( 0, 10 )
[connection signal="timeout" from="fsm/wall_slide/wall_slide_timer" to="fsm/wall_slide" method="_on_wall_slide_timer_timeout"]
